--- a/app/views/front/items/_item_search.html.erb
+++ b/app/views/front/items/_item_search.html.erb
@@ -1,6 +1,6 @@
 <div class="search-input form-group has-feedback has-feedback-left">
   <input type="text" placeholder="검색 키워드를 입력해주세요" />
-  <i style="left:0;font-size:1.2em;color:#ff7171;"class="glyphicon glyphicon-search form-control-feedback"></i>
+  <i style="left:0;font-size:1.2em;color:#a7c9a9;"class="glyphicon glyphicon-search form-control-feedback"></i>
 </div>
 
 <div class="search-end" onclick="item_search_toggle(false)">
