--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -13,8 +13,7 @@
     //제이슨으로 받아서 틀 하나 만들어두고 반복문으로 dom재생성한다
     //아니면 아래 부분만 새로운 데이터로 리로드한다
     function prefer_reset(){
-        $(".ask").modal('show');
-        $(".carousel").carousel(0);
+        $(".filter-popup").modal('show');
     }
     var page = 1;
     var end_param = true;
