--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -53,11 +53,10 @@ a:active {color:black;}
 //loading image
 .contents-loading{
   height:20vh;
-  background-image:url("/assets/loading.gif");
+  background-image:url("/assets/loading.svg");
   background-position:top;
   background-size:15%;
   background-repeat:no-repeat;
-
 }
 
 
@@ -70,7 +69,7 @@ display:table;
 width:100%;
 height:8vh;
 text-align:center;
-background-color: #ff7171;
+background-color: rgb(201,201,201);
 margin-bottom:1%;
 position:fixed;
 top:0;
@@ -107,8 +106,8 @@ z-index: 10;
       display: table-cell;
       font-size: 1.5em;
       color: transparent;
-      background: url('/assets/logo.png') no-repeat center;
-      background-size:23% 65%;
+      background: url('/assets/intro/logos/mariazu.png') no-repeat center;
+      background-size:30% 55%;
 
     }
 
@@ -131,7 +130,7 @@ z-index: 10;
 
 }
 .noti-tag{
-  width:70%;
+  width:72%;
   height:100%;
   float:left;
   padding:2% 0%;
@@ -144,11 +143,11 @@ z-index: 10;
   font-weight: 500;
 }
 .noti-button{
-  width:30%;
+  width:28%;
   height:100%;
   border:white 1px solid;
-  border-radius:20px;
-  background:rgba(0,0,0,0.4);
+  border-radius:6px;
+  background:rgb(201,201,201);
   float:left;
   display: table;
 }
@@ -205,6 +204,7 @@ width:100%;
 position:fixed;
 top:7.9vh;
 background: white;
+padding:1%;
 z-index: 3;
 box-shadow:1px 1px 8px grey;
 
@@ -214,22 +214,22 @@ box-shadow:1px 1px 8px grey;
 
 	display:table;
 	height:43%;
-	width:23vw;
+	width:22vw;
     margin:1% 1vw 1% 1vw;
     //margin-top:1%;
     //margin-bottom:1%;
     //margin-left:1.3%;
     //margin-right:1.3%;
 	float:left;
-	border-radius:15px;
-	border:solid 1px #d15753;
-    color:black;
+	border-radius:6px;
+	border:solid 1px #a7c9a9;
+    color:#6d6d6d;
 
 	}
 
     .tag-button-clicked{
-    color:white;
-    background-color:#d15753!important;
+    color:white!important;
+    background-color:#a7c9a9!important;
     }
 
 	.tag-text{
@@ -310,7 +310,7 @@ margin-top:17vh;
     }
 
     .likebutton-shop-clicked{
-      background-image: url("/assets/ICON/shoplike-clicked.png");
+      background-image: url("/assets/ICON/likeshop-touch.png");
     }
 	.content-title{
 	float:left;
@@ -395,6 +395,7 @@ margin-top:17vh;
 }
 .shop-clicked{
   background-image: url("/assets/ICON/footer/shop-clicked.png");
+  background-size:30%;
 }
 .likeshop{
   background-image: url("/assets/ICON/footer/likeshop.png");
@@ -407,6 +408,7 @@ margin-top:17vh;
 }
 .product-clicked{
   background-image: url("/assets/ICON/footer/item-clicked.png");
+  background-size:28%;
 }
 .likeitem{
   background-image: url("/assets/ICON/footer/likeitem.png");
@@ -454,7 +456,7 @@ margin-top:17vh;
   .modal-header{
     padding:0;
     height:8vh;
-    background-color:#ff7171;
+    background-color:rgb(201,201,201);
     color:white;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
@@ -553,7 +555,7 @@ margin-top:17vh;
           background-position: center;
         }
         .likebutton-item-clicked{
-          background-image:url("/assets/ICON/like-touch.png");
+          background-image:url("/assets/ICON/likeitem-touch.png");
         }
 
         .modal-product-detail{
@@ -600,9 +602,10 @@ margin-top:17vh;
   min-width:12vw;
   text-align: center;
   display: inline-block;
-  border-radius: 8px;
+  border-radius: 6px;
   background-color: white;
-  border: solid #d15753 1px;
+  border: solid #a7c9a9 1px;
+  color:#6d6d6d;
 }
   .modal-filter-button>span{
   }
@@ -618,7 +621,7 @@ margin-top:17vh;
 }
 .login-face{
   height: 100%;
-  background-image: url(/assets/intro/login_background.png);
+  background-image: url(/assets/intro/intro.png);
   background-size: 100% 100%;
 }
 .login-padding{
@@ -672,12 +675,29 @@ margin-top:17vh;
 }
 
 .face{
-  height:100%;
-  background-image:url('/assets/intro/intro_01.png');
+  height:100vh;
+  background-image:url('/assets/intro/intro.png');
   background-size:100% 100%;
 }
+.face-index{
+  width:100%;
+  height:100%;
+}
 .face-padding{
-  height:60%;
+  height:21%;
+}
+.face-logo{
+  height:19%;
+  background-image:url("/assets/intro/logos/mariazu.png");
+  background-size:75%;
+  margin-bottom:3%;
+  background-repeat:no-repeat;
+  background-position: bottom;
+}
+.face-slogan{
+  text-align: center;
+  font-size:1.2em;
+  color:rgb(51,51,51);
 }
 .face-message{
   height:30%;
@@ -691,14 +711,54 @@ margin-top:17vh;
   font-size:1.3em;
   color:white;
   text-align:center;
+  text-shadow: 1px 0 4px grey, 0 1px 9px grey, 1px 0 3px grey, 0 -1px 6px grey;
+
+}
+
+.face-pick{
+  width:100%;
+  height:100%;
+  padding:40% 0%;
+  background: rgba(0,0,0,0.5);
+}
+.pick{
+  height:100%;
+}
+.pick-header{
+  height: 8%;
+  text-align: center;
+  color: white;
+  font-size: 1.2em;
+}
+.pick-box{
+  height: 85%;
+  margin: 3%;
+  padding: 5%;
+  text-align: center;
+  border: white 1px solid;
+}
+.pick-button{
+  color: white;
+  border: 1px solid white;
+  border-radius: 6px;
+  min-width: 9%;
+  height: 5.5vh;
+  text-align: center;
+  margin: 3% 2%;
+  padding: 3%;
+  display: inline-block;
+  line-height:1;
+}
+.pick-button>span {
+
 }
 
 .ask-step{
   height: 25%;
-  width: 70%;
+  width: 50%;
   margin: 3% auto;
   font-size:1.3em;
-  border-radius: 25px;
+  border-radius: 3px;
   background: rgba(0,0,0,0.3);
   display: table;
   border: solid 1px white;
