--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -57,9 +57,9 @@
                 <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
             </a>
             <% if !@userlikeitems.include?(record.id)%>
-                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+                <div name="likeitem<%=record.id%>" class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
             <% else %>
-                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+                <div name="likeitem<%=record.id%>" class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
             <% end %>
             <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
               <div class="modal-product-detail">
@@ -78,9 +78,9 @@
               <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
           </a>
           <% if !@userlikeitems.include?(record.id)%>
-              <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+              <div name="likeitem<%=record.id%>" class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
           <% else %>
-              <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+              <div name="likeitem<%=record.id%>" class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
           <% end %>
           <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
             <div class="modal-product-detail">
