--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,7 @@
     }
 
     function userlike(click,type,id){
-        $("div[name=likeitem"+id+"]").toggleClass('likebutton-'+type+'-clicked');
+        $("div[name=like"+type+id+"]").toggleClass('likebutton-'+type+'-clicked');
 //        $(".userlike_parent"+click+">")
         var type=type;
         var id = id;
@@ -99,7 +99,7 @@
             success:function(){
             },
             error:function(){
-                $("div[name=likeitem"+id+"]").toggleClass('likebutton-'+type+'-clicked');
+                $("div[name=like"+type+id+"]").toggleClass('likebutton-'+type+'-clicked');
                 login_popup();
             }
         })
