--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -1,8 +1,10 @@
 <script>
   $("body").addClass("background-grey");
+  $("#loading").show();
   $(".browser-contents").attr('style','margin-top:16.5vh;');
   window.location.hash = "";
 </script>
+<div id="loading" style="width:100%;height:105%;background: url(/assets/loading.svg) no-repeat center;"></div>
 <div class="body-divide">
   <% @product1.each do |record| %>
       <div class="modal-product-item">
@@ -46,3 +48,8 @@
   <% end %>
   <div class="contents-loading" style="display:none;"></div>
 </div>
+<script>
+    $(".body-divide").ready(function(){
+        $("#loading").hide();
+    });
+</script>
