--- a/app/views/front/bridge.html.erb
+++ b/app/views/front/bridge.html.erb
@@ -3,7 +3,7 @@
 
 <script>
   $(document).ready(function(){
-      setTimeout(function(){ $(location).attr('href', '<%=@record.url%>') }, 1000);
+      setTimeout(function(){ $(location).attr('href', '<%=@record.url%>') }, 1
 
   })
 
