--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,7 +1,7 @@
 <div class="modal intro">
   <%= render "front/modal/intro/intro"%>
 </div>
-<div class="modal login-modal">
+<div class="modal login-modal fade">
   <%= render "front/modal/login"%>
 </div>
 <div class=top-bar>
