--- a/app/views/front/bridge.html.erb
+++ b/app/views/front/bridge.html.erb
@@ -1,6 +1,7 @@
 
 
 <script>
+  ga('send','event','outlink','click','<%=@record.id%>');
   $(document).ready(function(){
       setTimeout(function(){ $(location).attr('href', '<%=@record.url%>') }, 1);
 
