--- a/app/views/front/frame/_top_bar.html.erb
+++ b/app/views/front/frame/_top_bar.html.erb
@@ -1,5 +1,5 @@
-  <div class="itemfilter-button" onclick="item_filter_popup()"></div>
-  <div class="itemsearch-button" onclick="item_search_toggle(true)"></div>
+  <div class="itemfilter-button" onclick="item_filter_popup();ga('send','event','filter','popup','topbar');"></div>
+  <div class="itemsearch-button" onclick="item_search_toggle(true);ga('send','event','index','move','search');"></div>
 	<span class=service-title>내 그릇장</span>
 
 
