--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -1,14 +1,14 @@
 <div class="footer-button productlist">
-  <span class="iconimg product product-clicked" name=product onclick="section_transfer('product');"></span>
+  <span class="iconimg product product-clicked" name=product onclick="section_transfer('product');ga('send','event','section','move','product');"></span>
 </div>
 <div class="footer-button likeitemlist">
-  <span class="iconimg likeitem" name=likeitem onclick="section_transfer('likeitem');"></span>
+  <span class="iconimg likeitem" name=likeitem onclick="section_transfer('likeitem');ga('send','event','section','move','likeitem');"></span>
 </div>
 <div class="footer-button shoplist" >
-  <span class="iconimg shop" name=shop onclick="section_transfer('shop');"></span>
+  <span class="iconimg shop" name=shop onclick="section_transfer('shop');ga('send','event','section','move','shop');"></span>
 </div>
 <div class="footer-button likeshoplist">
-  <span class="iconimg likeshop" name="likeshop" onclick="section_transfer('likeshop');"></span>
+  <span class="iconimg likeshop" name="likeshop" onclick="section_transfer('likeshop');ga('send','event','section','move','likeshop');"></span>
 </div>
 <div class="footer-button etclist" style="display:none;">
   <span class="iconimg etc" name="etc" onclick="section_transfer('etc');"></span>
