--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -14,6 +14,7 @@
     //아니면 아래 부분만 새로운 데이터로 리로드한다
     function prefer_reset(){
         $(".filter-popup").modal('show');
+        ga('send','event','filter','popup','notibar');
     }
     var page = 1;
     var end_param = true;
@@ -57,6 +58,7 @@
         if($('body')[0].scrollHeight-browser.scrollTop()<browser.outerHeight()+90)
         {   console.log("90");
             if(switcher&end_param) {
+                ga('send','event','product','scroll',index+','+style+','+purpose);
                 $(".body-divide>.contents-loading:last-child").show();
 
                 $("<div>").load("/slide_contents/item/" + index + "?page=" + page+"&hashtag="+style+','+purpose, function (data) {
