--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -22,16 +22,16 @@
     <div class="modal-body">
       <div class="body-divide">
         <% @product1.each do |record| %>
-        <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
+        <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
           <div class="modal-product-item">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
         </a>
             <% if !@userlikeitems.include?(record.id)%>
-                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
             <% else %>
-                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
             <% end %>
-          <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
+          <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
               <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
@@ -44,16 +44,16 @@
       </div>
       <div class="body-divide">
         <% @product2.each do |record| %>
-        <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
+        <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
           <div class="modal-product-item">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
         </a>
             <% if !@userlikeitems.include?(record.id)%>
-                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
             <% else %>
-                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
             <% end %>
-          <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
+          <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
               <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
@@ -64,7 +64,7 @@
         <div style="height:10vh;"></div>
       </div>
     </div>
-    <a href="<%=@merchant.url%>" target="_blank" onclick="ga('send','event','shop-link','<%=@merchant.id%>');">
+    <a href="<%=@merchant.url%>" target="_blank" onclick="ga('send','event','shop-popup','outlink','<%=@merchant.title%>');">
       <div class="modal-footer">
         <span>쇼핑몰로 이동</span>
       </div>
