--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -17,9 +17,9 @@
           <!--<div class="modal-shoptags"></div>-->
         </div>
         <% if !@userlikeitems.include?(@input_record.id)%>
-            <div  name=likeitem<%=@input_record.id%> class="likebutton-item-modal" onclick="userlike(this,'item','<%= @input_record.id%>');hide_rcmd();ga('send','event','recommend-body','like','<%=record.id%>');"></div>
+            <div  name=likeitem<%=@input_record.id%> class="likebutton-item-modal" onclick="userlike(this,'item','<%= @input_record.id%>');hide_rcmd();ga('send','event','recommend-body','like','<%=@input_record.id%>');"></div>
         <% else %>
-            <div  name=likeitem<%=@input_record.id%> class="likebutton-item-modal likebutton-item-clicked" onclick="userlike(this,'item','<%= @input_record.id%>');hide_rcmd();ga('send','event','recommend-body','like','<%=record.id%>');"></div>
+            <div  name=likeitem<%=@input_record.id%> class="likebutton-item-modal likebutton-item-clicked" onclick="userlike(this,'item','<%= @input_record.id%>');hide_rcmd();ga('send','event','recommend-body','like','<%=@input_record.id%>');"></div>
         <% end %>
         <!--<div class="modal-header-section">-->
 
@@ -39,7 +39,7 @@
           </div>
           <div class="outlink">
             <div>
-              <a onclick="ga('send','event','recommend-head','outlink','<%=record.id%>');" target="_blank"href="<%=@input_record.url%>">구매하러 가기</a>
+              <a onclick="ga('send','event','recommend-head','outlink','<%=@input_record.id%>');" target="_blank"href="<%=@input_record.url%>">구매하러 가기</a>
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
               <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
           </a>
           <% if !@userlikeitems.include?(record.id)%>
-              <div name="likeitem<%=record.id%>" class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','recommend-body','like','<%=record.id%>');"></div>
+              <div name="likeitem<%=record.id%>" class="likebutton-item" onclick="userlike(this,'item','<%= @input_record.id%>');ga('send','event','recommend-body','like','<%=record.id%>');"></div>
           <% else %>
               <div name="likeitem<%=record.id%>" class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','recommend-body','like','<%=record.id%>');"></div>
           <% end %>
