--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -64,7 +64,7 @@ a:active {color:inherit;}
   float:left;
   margin-top:2%;
   width:100%;
-  height:15%;
+  height:18%;
   text-align: center;
 }
 .contents-end>span{
@@ -429,6 +429,9 @@ margin-top:17vh;
 .product{
   background-image: url("/assets/ICON/footer/item.png");
 }
+.product-price{
+  font-size:1.1em;
+}
 .product-clicked{
   background-image: url("/assets/ICON/footer/item-clicked.png");
   background-size:28%;
@@ -469,6 +472,8 @@ margin-top:17vh;
   margin:0;
   height:100%;
 }
+
+
 
 .modal-content{
   padding:0;
@@ -709,7 +714,7 @@ margin-top:17vh;
   height:100%;
 }
 .face-padding{
-  height:20%;
+  height:18.5%;
 }
 .face-logo{
   height:19%;
@@ -758,7 +763,7 @@ margin-top:17vh;
 .pick-box{
   height: 85%;
   margin: 3%;
-  padding: 5%;
+  overflow:auto;
   text-align: center;
   border: white 1px solid;
 }
@@ -930,6 +935,7 @@ margin-top:17vh;
   font-size:1.2em;
 }
 .item-detail>.price{
+  font-size:1.1em;
   display:table;
   text-align: center;
 }
