--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -19,7 +19,7 @@
         <a onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
-              <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
+              <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
               <span></span>
             </div>
         </a>
@@ -40,9 +40,9 @@
         <% end %>
         <a id=item<%=record.id%> onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
             <div class="modal-product-detail">
-                                               <span><%=record.title%></span><br>
-                                               <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
-                                               </div>
+               <span><%=record.title%></span><br>
+               <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</spanc>
+               </div>
         </a>
       </div>
   <% end %>
