--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -34,7 +34,7 @@
           <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
-              <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
+              <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
               <span></span>
             </div>
           </div>
@@ -56,7 +56,7 @@
           <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
-              <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
+              <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
             </div>
           </div>
         </a>
