--- a/app/views/front/likelist/_contents-item-frame.html.erb
+++ b/app/views/front/likelist/_contents-item-frame.html.erb
@@ -16,4 +16,5 @@
 </div>
 <script>
     $(".browser-contents").attr('style','margin-top:8vh;height:84%;');
+    $(".contents-end").hide();
 </script>
