--- a/app/views/front/modal/_product_filter.html.erb
+++ b/app/views/front/modal/_product_filter.html.erb
@@ -6,12 +6,13 @@
         var category = $("#카테고리>.tag-button-clicked").map(function(){return this.id}).get().join(',');
         var style = $("#스타일>.tag-button-clicked").map(function(){return this.id}).get().join(',');
         var purpose = $("#용도>.tag-button-clicked").map(function(){return this.id}).get().join(',');
+        var color = $("#색상>.color-button-clicked").map(function(){return this.id}).get().join(',');
         var hashtag = style+','+purpose;
         //카테고리 스타일 용도를 층별로 모
         end_param = true;
         ga('send','event','filter','move',category+','+hashtag);
         page = 1;
-        $(".contents-frame").load('/contents/item/?id='+category+'&hashtag='+hashtag,function(){
+        $(".contents-frame").load('/contents/item/?id='+category+'&hashtag='+hashtag+'&color='+color,function(){
         });
         $(".tag-browser>.tag-button-clicked").removeClass("tag-button-clicked");
 
@@ -26,6 +27,21 @@
 
     }
 
+    function color_toggle(a){
+        $(a).toggleClass("color-button-clicked");
+        inner = $(a).children().text()
+
+        if(inner===""){
+            inner = $(a)[0].id;
+            $(a).children().text(inner);
+
+        }else{
+            inner = "";
+            $(a).children().text('')
+        }
+        $(a).children().toggleClass("glyphicon glyphicon-ok");
+
+    }
     function reset_filter(){
         $(".modal-filter-button").removeClass("tag-button-clicked");
         section_transfer('product');
@@ -62,6 +78,18 @@
         </div>
       </div>
       <% end %>
+      <div class="modal-filter-body-horizontal">
+        <div class="modal-filter-body-header">
+          <span>색상</span>
+        </div>
+        <div class="modal-filter-list" id="색상">
+          <% @color_hash.each do |color,code| %>
+              <div  id='<%=color%>' class="color-button" style="background:<%=code%>; background-size:contain;" onclick="color_toggle(this);ga('send','event','filter','browse','<%=color%>');">
+                <span><%=color%></span>
+              </div>
+          <% end %>
+        </div>
+      </div>
       <div style="height:10vh;"></div>
     </div>
     <a onclick="filter_apply()">
