--- a/app/views/front/modal/intro/_intro.html.erb
+++ b/app/views/front/modal/intro/_intro.html.erb
@@ -81,7 +81,10 @@
         else{
             category = data;
             $(".intro").modal('hide');
-            $(".contents-frame").load('/contents/item/?id='+category+'&hashtag='+styletag,function(){});
+            $(".contents-frame").load('/contents/item/?id='+category+'&hashtag='+styletag,function(){
+
+                $(".login-modal").modal('show');
+            });
             $("#"+data).addClass("tag-button-clicked");
         }
 
