--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -26,7 +26,11 @@
         <!--</div>-->
       </div>
       <div class="item-header-body">
+        <div>
+        <a href="<%=@input_record.url%>">
         <div class="item-image" ></div>
+        </a>
+        </div>
         <div class="item-detail">
           <div class="title">
             <span><%=@input_record.merchant.title%></span>
