--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <div class="modal-header-left">
-        <div class="backbutton" onclick="window.history.back();">
+        <div class="backbutton" data-dismiss="modal">
 
           <span class="glyphicon glyphicon-menu-left"></span>
         </div>
