--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -137,7 +137,6 @@ z-index: 10;
 //contents
 .contents-frame{
   height:100%;
-  //overflow-x:hidden;
 }
 //notibar
 .notibar{
@@ -222,31 +221,30 @@ z-index: 10;
 
 .tag-browser{
 
-height:15vh;
-width:100%;
-position:fixed;
-top:7.9vh;
-background: white;
-padding:1%;
-z-index: 3;
-box-shadow:1px 1px 8px grey;
+  height: 8vh;
+  width: 100%;
+  position: fixed;
+  top: 7.9vh;
+  background: white;
+  overflow-y: hidden;
+  white-space: nowrap;
+  overflow-x: auto;
+  padding: 1%;
+  z-index: 3;
+  box-shadow: 1px 1px 8px grey;
 
 }
 
 	.tag-button{
-
-	display:table;
-	height:43%;
-	width:22vw;
-    margin:1% 1vw 1% 1vw;
-    //margin-top:1%;
-    //margin-bottom:1%;
-    //margin-left:1.3%;
-    //margin-right:1.3%;
-	float:left;
-	border-radius:6px;
-	border:solid 1px #a7c9a9;
-    color:#6d6d6d;
+      display: inline-block;
+      height: 86%;
+      width: 20vw;
+      margin: 1% 1vw 1% 1vw;
+      line-height: 220%;
+      text-align: center;
+      border-radius: 6px;
+      border: solid 1px #a7c9a9;
+      color: #6d6d6d;
 
 	}
 
@@ -257,7 +255,6 @@ box-shadow:1px 1px 8px grey;
 
 	.tag-text{
 
-	display:table-cell;
 	vertical-align:middle;
 	text-align:center;
 	font-size:1em;
@@ -281,7 +278,7 @@ margin-top:17vh;
 	.content-block{
 
 	height:14%;
-	width:100%;
+	width:97%;
     position:relative;
 	}
 
