--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -501,7 +501,7 @@ margin-top:17vh;
       width: 19%;
       height: 100%;
       text-align: center;
-      line-height: 320%;
+      line-height: 3em;
     }
       .modal-header-right>span{
         vertical-align: middle;
