--- a/app/views/front/modal/_login.html.erb
+++ b/app/views/front/modal/_login.html.erb
@@ -3,7 +3,8 @@
     <div class="modal-body intro-body">
       <div class="login-face">
         <div class="login-padding"></div>
-        <div class="login-header"><div>
+        <div class="login-header">
+          <div id="fishing-message">
           감각적인 당신을 위해<br>꼭 맞는 테이블웨어를 찾았습니다<br>로그인하고 확인해보세요!</div>
         </div>
         <div class="face-message">
