--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -52,7 +52,7 @@
     <div class="modal-body overflow-y-hidden" style="height:100%;" id="item-rcmd-body">
       <div class="item-focus-dummy">
       </div>
-      <div class="item-focus-beforelogin" style=""><span>즐겨찾기에 추가하시면<br>추천 상품을 확인하실 수 있습니다</span></div>
+      <div class="item-focus-beforelogin" style=""><span>즐겨찾기에 추가하시면<br>마리아주를 완성할<br>추천 리스트를 확인하실 수 있습니다</span></div>
       <div class="body-divide">
 
         <% @product1.each do |record| %>
@@ -115,12 +115,7 @@
 
     });
 
-    function hide_rcmd(){
-//        $("#item-rcmd-body").attr("style","height:100%;");
-        $("#item-rcmd-body").toggleClass('overflow-y-hidden');
-        $(".item-focus-beforelogin").toggle();
-        $("#item-rcmd-body").scrollTop(0);
-    }
+
 <% if !@userlikeitems.include?(@input_record.id)%>
     <% else %>
     hide_rcmd()
