--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,7 +121,7 @@
             error:function(){
                 $("div[name=like"+type+id+"]").toggleClass('likebutton-'+type+'-clicked');
                 hide_rcmd();
-                $("#nudge-message").html("즐겨찾기에 추가하고<br>멋진 마리아주를 완성할<br>추천 리스트를 확인해 보세요");
+                $("#nudge-message").html("즐겨찾기에 추가하시고<br>멋진 마리아주를 완성할<br>추천 리스트를 확인해 보세요");
                 login_popup();
             }
         })
