--- a/app/views/front/db_input.html.erb
+++ b/app/views/front/db_input.html.erb
@@ -3,6 +3,8 @@
 <select name="table">
   <option value="merchant">merchant</option>
   <option value="product">product</option>
+  <option value="promotion_product">promotion_product</option>
+  <option value="promotion">promotion</option>
 </select>
 <textarea rows="100" cols="100" name="input_textarea"></textarea>
 <input type=submit value="input">
