--- a/app/views/front/home/_tag_browser.html.erb
+++ b/app/views/front/home/_tag_browser.html.erb
@@ -2,7 +2,7 @@
 
 	<% @head_tag.each do |tag| %>
 	<div class=tag-button id="<%=tag%>"  onclick="tag_toggle(this);tag_sort();ga('send','event','shop-tag','click','<%=tag%>');">
-		<span class=tag-text ><%= '#'+tag%></span>
+		<span class=tag-text ><%=tag%></span>
 	</div>
 	<% end %>
 
